--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1404,7 +1404,7 @@ body {
 }
 
 .modal-container {
-  position: fixed;
+  /*position: fixed;*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1443,6 +1443,9 @@ body {
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .close-button-icon {
@@ -1553,31 +1556,21 @@ body {
   color: #333333;
 }
 
-.search-form-number-blok {
+.search-form-number-block {
   display: flex;
   justify-content: space-between;
   margin-bottom: 48px;
-  gap: 4px;
+  gap: 50px;
 }
 
-.search-form-number {
+.number-block {
   display: flex;
   align-items: center;
 }
 
-.number-label-adult {
-  width: 127px;
-  padding-right: 10px;
-}
-
-.number-label-children {
-  width: 132px;
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 46px;
-}
-
 .number-label {
+  display: flex;
+  align-items: center;
   font-family: inherit;
   font-weight: 700;
   font-size: 20px;
@@ -1588,12 +1581,29 @@ body {
   background-color: transparent;
 }
 
+.number-label-adult {
+  width: 127px;
+}
+
+.number-label-children {
+  padding-right: 10px;
+}
+
+.number-label-group {
+  justify-content: flex-end;
+  margin-right: 36px;
+}
+
 .tooltip {
   position: relative;
   margin-top: 1px;
   width: 26px;
   height: 26px;
   flex-shrink: 0;
+}
+
+.tooltip-toggle:focus-visible {
+  border-radius: 50%;
 }
 
 .tooltip-toggle {
@@ -1679,28 +1689,7 @@ body {
   appearance: none;
 }
 
-.number-field {
-  width: 30px;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  text-align: center;
-  background-color: #f2f2f2;
-  padding: 12px 3px;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px;
-  appearance: textfield;
-  z-index: 2;
-}
-
-.number-field::-webkit-outer-spin-button,
-.number-field::-webkit-inner-spin-button {
-  appearance: none;
-}
-
-.minus-plus {
+.minus-plus-block {
   display: flex;
   background: #f2f2f2;
   width: 110px;
@@ -1712,7 +1701,6 @@ body {
 .number-minus,
 .number-plus {
   width: 38px;
-  height: 48px;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
@@ -1720,7 +1708,7 @@ body {
   background-color: #f2f2f2;
   background-repeat: no-repeat;
   background-position: center;
-  padding: 14px 10px;
+  margin: 14px 10px;
   box-sizing: border-box;
   border: none;
   border-radius: 4px;
@@ -1735,12 +1723,12 @@ body {
   background-color: rgba(117, 97, 87, 0.3);
   mask-image: url("../images/minus.svg");
   mask-repeat: no-repeat;
-  top: 14px;
-  left: 10px;
+  top: 0;
+  left: 0;
 }
 
-.number-minus:hover.number-minus::after,
-.number-minus:focus-visible.number-minus::after {
+.number-minus:hover::after,
+.number-minus:focus-visible::after {
   background-color: #000000;
 }
 
@@ -1756,19 +1744,18 @@ body {
   background-color: rgba(117, 97, 87, 0.3);
   mask-image: url("../images/plus.svg");
   mask-repeat: no-repeat;
-  top: 14px;
-  left: 10px;
+  top: 0;
+  left: 0;
 }
 
-.number-plus:hover.number-plus::after,
-.number-plus:focus-visible.number-plus::after {
+.number-plus:hover::after,
+.number-plus:focus-visible::after {
   background-color: #000000;
 }
 
-.number-plus:active.number-plus::after {
+.number-plus:active::after {
   background-color: rgba(0, 0, 0, 0.2);
 }
-
 
 .search-button {
   display: inline-block;
@@ -1784,4 +1771,17 @@ body {
   width: 577px;
   padding: 8px;
   cursor: pointer;
+}
+
+.search-button[disabled] {
+  background-color: #e5e5e5;
+}
+
+.search-button:hover,
+.search-button:focus-visible {
+  background-color: #68a2ca;
+}
+
+.search-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
