--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1433,7 +1433,7 @@ body {
 }
 
 .modal-container {
-  /*position: fixed;*/
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
