--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,7 @@ body {
 
 .navigation-logo {
   margin-right: 28px;
+  align-self: flex-start;
 }
 
 .logo {
@@ -89,7 +90,7 @@ body {
 }
 
 .navigation-list {
-  max-width: 648px;
+  max-width: 550px;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -135,7 +136,7 @@ body {
 }
 
 .user-list {
-  width: 280px;
+  width: 268px;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -144,7 +145,7 @@ body {
 }
 
 .user-item-button {
-  padding: 14px 0 14px 20px;
+  padding: 14px 0 14px 18px;
 }
 
 .user-link {
@@ -157,9 +158,9 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 22px 10px 22px 12px;
+  padding: 22px 9px 22px 11px;
   box-sizing: border-box;
-  margin-right: 2px;
+  margin-right: 1px;
 }
 
 .user-link:hover {
@@ -219,6 +220,7 @@ body {
   text-decoration: none;
   text-align: center;
   padding: 8px 8px;
+  box-sizing: border-box;
 }
 
 .user-button:hover {
@@ -310,7 +312,7 @@ body {
   justify-content: center;
   width: 400px;
   min-height: 385px;
-  padding: 10px 85px;
+  padding: 20px 85px;
   box-sizing: border-box;
   align-items: center;
 }
@@ -617,7 +619,7 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-  align-self: center;
+  width: 152px;
 }
 
 .socials-link {
@@ -628,7 +630,7 @@ body {
   background-color: #ffffff;
   text-decoration: none;
   display: block;
-  width: 48px;
+  width: 47px;
   height: 40px;
   box-sizing: border-box;
   margin-right: 3px;
@@ -647,7 +649,7 @@ body {
 }
 
 .socials-vk {
-  padding: 12px 12px 13px 12px;
+  padding: 11px 13px 12px 12px;
   fill: #82b3d3;
 }
 
@@ -668,6 +670,7 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
+  padding: 10px;
 }
 
 .phone:hover {
@@ -724,7 +727,7 @@ body {
   line-height: 78px;
   margin: 0;
   padding: 0;
-  margin-bottom: 8px;
+  margin-bottom: 3px;
 }
 
 .breadcrumbs {
@@ -736,7 +739,7 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
   align-items: center;
 }
 
@@ -764,6 +767,7 @@ body {
 .breadcrumbs-link {
   color: #ffffff;
   text-decoration: none;
+
 }
 
 .breadcrumbs-link:hover {
@@ -844,7 +848,7 @@ body {
   gap: 16px;
   padding: 1px 0;
 }
-/**
+
 .control-element:hover {
   opacity: 0.6;
 }
@@ -852,7 +856,6 @@ body {
 .control-element:active {
   opacity: 0.3;
 }
-*/
 
 .control-input-infrastructure {
   width: 20px;
@@ -863,10 +866,6 @@ body {
   -webkit-appearance: none;
   appearance: none;
   margin: 0;
-}
-
-.control-input-infrastructure:hover {
-  opacity: 0.6;
 }
 
 .control-input-infrastructure:checked {
@@ -1033,7 +1032,7 @@ body {
 
 .apply {
   background-color: #82b3d3;
-  margin-bottom: 30px; /*по макету 32px*/
+  margin-bottom: 32px;
 }
 
 .apply:hover {
@@ -1179,9 +1178,9 @@ body {
 .product-list {
   display: grid;
   grid-template-columns: repeat(3, 340px);
-  gap: 20px;
+  gap: 19px 20px;
   margin: 0;
-  padding: 40px 0 80px;
+  padding: 40px 0 81px;
 }
 
 .product-item {
@@ -1190,7 +1189,7 @@ body {
   margin: 0;
   list-style: none;
   box-sizing: border-box;
-  padding: 19px;
+  padding: 20px 19px 19px 19px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 212px 1fr;
@@ -1200,8 +1199,9 @@ body {
 
 .product-title-link {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 21px;
   line-height: 28px;
+
   color: #000000;
   text-decoration: none;
   grid-column: 1/-1;
@@ -1209,6 +1209,7 @@ body {
 
 .product-title {
   margin: 0;
+  font-stretch: 50%;
 }
 
 .product-title:hover {
@@ -1412,7 +1413,7 @@ body {
   min-width: 60px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 36px;
+  line-height: 38px;
   text-align: center;
   padding: 12px 0;
 }
@@ -1654,10 +1655,6 @@ body {
 .form-label-icon {
   position: relative;
   padding-right: 16px;
-}
-
-.tooltip-toggle:hover .tooltip-icon {
-  opacity: 0.6;
 }
 
 .tooltip-text {
