--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,11 +103,11 @@ body {
   display: block;
   font-weight: 700;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 23px;
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 19px 14px 19px 16px;
+  padding: 18px 15px 20px 16px;
   position: relative;
   margin-top: 1px;
   margin-right: 2px;
@@ -158,7 +158,6 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 22px 9px 22px 11px;
   box-sizing: border-box;
   margin-right: 1px;
 }
@@ -278,7 +277,7 @@ body {
 }
 
 .advantages-wrapper {
-  width: 652px;
+  width: 655px;
   margin: 0 auto;
   padding: 69px 0;
 }
@@ -312,7 +311,7 @@ body {
   justify-content: center;
   width: 400px;
   min-height: 385px;
-  padding: 20px 85px;
+  padding: 20px 84px;
   box-sizing: border-box;
   align-items: center;
 }
@@ -324,8 +323,10 @@ body {
   line-height: 28px;
   color: #000000;
   text-transform: uppercase;
-  margin: 0 0 60px 0;
+  margin: 0 0 60px 1px;
   position: relative;
+  text-align: center;
+
 }
 
 .advantages-heading::before {
@@ -401,6 +402,7 @@ body {
 
 .services-subtitle {
   margin-bottom: 20px;
+  margin-left: 1px;
 }
 
 .services-description-subtitle {
@@ -421,14 +423,14 @@ body {
   background-image: url("../images/services/housing.svg");
   background-repeat: no-repeat;
   background-position: top center;
-  padding-top: 102px;
+  padding-top: 103px;
 }
 
 .services-food {
   background-image: url("../images/services/food.svg");
   background-repeat: no-repeat;
   background-position: top center;
-  padding-top: 102px;
+  padding-top: 103px;
 }
 
 .services-souvenirs {
@@ -443,6 +445,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   margin: 0;
+  padding: 0 0 0 2px;
 }
 
 .services-list {
@@ -527,6 +530,7 @@ body {
 
 .subscribe-description-subtitle {
   margin-top: 0;
+  margin-left: 2px;
   margin-bottom: 54px;
 }
 
@@ -556,7 +560,7 @@ body {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   background-color: #f2f2f2;
-  padding: 14px;
+  padding: 15px 20px;
   box-sizing: border-box;
   border: none;
 }
@@ -608,7 +612,7 @@ body {
 }
 
 .page-footer {
-  padding: 40px 70px 30px 70px;
+  padding: 34px 70px 30px 70px;
   display: flex;
   justify-content: space-between;
 }
@@ -616,6 +620,7 @@ body {
 .socials-list {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -649,17 +654,17 @@ body {
 }
 
 .socials-vk {
-  padding: 11px 13px 12px 12px;
+  padding: 11px 14px 12px 11px;
   fill: #82b3d3;
 }
 
 .socials-telegram {
-  padding: 12px 15px 12px 16px;
+  padding: 12px 19px 12px 12px;
   fill: #82b3d3;
 }
 
 .socials-youtube {
-  padding: 11px 13px;
+  padding: 11px 19px 11px 7px;
   fill: #82b3d3;
 }
 
@@ -670,7 +675,7 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 10px;
+  padding:  10px 9px 10px 11px;
 }
 
 .phone:hover {
@@ -692,6 +697,7 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
+  margin: auto 0;
 }
 
 .copyright-link:hover svg {
@@ -707,9 +713,8 @@ body {
 }
 
 .copyright-logo {
-  padding: 3px 0 4px 10px;
+  padding: 6px 0 3px 10px;
   fill: #000000;
-  vertical-align: middle;
 }
 
 .catalog-header {
@@ -728,11 +733,12 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 3px;
+  margin-top: -1px;
 }
 
 .breadcrumbs {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrappx;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
@@ -750,7 +756,7 @@ body {
 .breadcrumbs-item:not(:first-of-type) {
   position: relative;
   padding: 5px 10px;
-  margin-left: 10px;
+  margin-left: 8px;
 }
 
 .breadcrumbs-item:not(:first-of-type)::before {
@@ -761,13 +767,12 @@ body {
   background-image: url("../images/breadcrumbs/arrow.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  padding: 11px 0;
+  padding: 10px 0;
 }
 
 .breadcrumbs-link {
   color: #ffffff;
   text-decoration: none;
-
 }
 
 .breadcrumbs-link:hover {
@@ -783,8 +788,8 @@ body {
 }
 
 .breadcrumbs-link-home {
-  width: 12px;
-  height: 12px;
+  width: 13px;
+  height: 13px;
   display: block;
   box-sizing: border-box;
   background-image: url("../images/breadcrumbs/home.svg");
@@ -820,6 +825,7 @@ body {
 }
 
 .housing-type {
+  margin-left: 1px;
   margin-right: auto;
 }
 
@@ -930,7 +936,7 @@ body {
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 23px;
   color: #000000;
   background-color: #f2f2f2;
   padding: 12px 20px;
@@ -1007,7 +1013,7 @@ body {
 
 .toggle-max {
   top: -8px;
-  right: 0;
+  right: -1px;
 }
 
 .filter-buttons {
@@ -1069,7 +1075,7 @@ body {
 }
 
 .catalog-products {
-  padding: 50px 70px 60px;
+  padding: 50px 70px 59px;
 }
 
 .sorting {
@@ -1081,7 +1087,7 @@ body {
 
 .sorting .subtitle {
   width: 468px;
-  padding-top: 7px;
+  padding-top: 6px;
 }
 
 .select-control {
@@ -1091,7 +1097,7 @@ body {
   line-height: 21px;
   color: #333333;
   background-color: #ffffff;
-  padding: 12px 20px;
+  padding: 12px 19px;
   padding-right: 40px;
   width: 292px;
   height: 48px;
@@ -1103,7 +1109,7 @@ body {
   appearance: none;
   background-image: url("../images/products/down-arrow.svg");
   background-repeat: no-repeat;
-  background-position: right 20px center;
+  background-position: right 18px center;
 }
 
 .select-control:hover {
@@ -1180,7 +1186,7 @@ body {
   grid-template-columns: repeat(3, 340px);
   gap: 19px 20px;
   margin: 0;
-  padding: 40px 0 81px;
+  padding: 40px 0 80px;
 }
 
 .product-item {
@@ -1201,15 +1207,16 @@ body {
   font-weight: 700;
   font-size: 21px;
   line-height: 28px;
-
   color: #000000;
   text-decoration: none;
   grid-column: 1/-1;
+  display: flex;
 }
 
 .product-title {
+
+  flex-shrink: 1;
   margin: 0;
-  font-stretch: 50%;
 }
 
 .product-title:hover {
@@ -1394,7 +1401,7 @@ body {
   color: #ffffff;
   background-color: #82b3d3;
   text-align: center;
-  padding: 12px 12px;
+  padding: 11px 12px 13PX;
   border-radius: 4px;
 }
 
@@ -1412,8 +1419,8 @@ body {
   box-sizing: border-box;
   min-width: 60px;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 38px;
+  font-size: 22px;
+  line-height: 37px;
   text-align: center;
   padding: 12px 0;
 }
