--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
-  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .page-header {
@@ -219,7 +219,6 @@ body {
   text-decoration: none;
   text-align: center;
   padding: 8px 8px;
-  box-sizing: border-box;
 }
 
 .user-button:hover {
@@ -1014,7 +1013,7 @@ body {
 }
 
 .range-toggle:hover {
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
 
 .range-toggle:focus-visible {
@@ -1028,6 +1027,7 @@ body {
 .range-toggle[disabled] {
   cursor: auto;
   outline: none;
+  background-color: #828c92;
 }
 
 .toggle-min {
@@ -1490,7 +1490,7 @@ body {
   background-color: #ffffff;
   width: 577px;
   border-radius: 30px;
-  box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
 .modal-close-button {
@@ -1712,7 +1712,6 @@ body {
   text-transform: none;
   padding: 20px 20px 24px 22px;
   border-radius: 10px;
-  display: block;
   box-sizing: border-box;
   width: 256px;
   position: absolute;
